@@ -1,11 +1,11 @@
 Summary: mtools, read/write/list/format DOS disks under Unix
 Name: mtools
 Version: 3.9.10
-Release: 4
+Release: 5
 Group: Utilities/System
 URL: http://mtools.linux.lu
 Source0: mtools-%{version}.tar.gz
-Patch1: mtools-%{version}-20070306.diff.gz
+Patch1: mtools-%{version}-20070308.diff.gz
 Buildroot: %{_tmppath}/%{name}-%{version}-buildroot
 License: GPL
 %description
