@@ -2,4 +2,4 @@ const char *mversion="3.9.10";
 
 /* Multiple releases on same day should be marked with (b), (cd), (d) after
  * date string below */
-const char *mdate = "Mar 6th, 2007";
+const char *mdate = "Mar 8th, 2007";
