@@ -1,3 +1,5 @@
+v20070308
+	Applied Jamey Sharp's mingw patch
 v20070306
 	Fixed doc about /etc/default
 v20070305
